added a view xaml file for each of my types of vehicle #fixes 24

--- a/PRG_MAUI_Car_Register/PRG_MAUI_Car_Register.csproj
+++ b/PRG_MAUI_Car_Register/PRG_MAUI_Car_Register.csproj
@@ -62,4 +62,16 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.10" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="view\CarPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="view\MotorcyclePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="view\TruckPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
